[package]
name = "date_utils"
version = "0.1.0"
edition = "2024"
authors = ["Matteo Montanari <matteomontanari014@gmail.com>"]
description = "A rust lib to handle dates and easily convert them into datetimes."
repository = "https://github.com/mattmingit/date_utils"

[dependencies]
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros", "formatting", "parsing", "local-offset", "serde"] }
